# commander-collector

./: .gitignore  BUGFIX-LIST.md  DEPLOYMENT.md  FEATURE-LIST.md  README.md  REFACTOR-IMPLEMENTATION-PROMPT.md  REFACTOR-INDEX.md  REFACTOR-PLAN-unified-card-workflow.md  REFACTOR-STATUS.md  TODO.md  changelog-seed.json  commander-collector.code-workspace  deploy.sh  next.config.ts  package-lock.json  package.json  tsconfig.json  turbo.json  vitest.config.ts
services/commander-mcp/: .env.example  .gitignore  README.md  pyproject.toml
services/commander-mcp/docs/: architecture.md
services/commander-mcp/src/commander_mcp/: __init__.py  confidence.py  config.py  server.py
services/commander-mcp/src/commander_mcp/crawl/: base.py  orchestrator.py  repo.py
services/commander-mcp/src/commander_mcp/db/: card_cache_repo.py  card_notes_repo.py  connection.py  feedback_repo.py  patterns_repo.py  rules_repo.py  schema.sql
services/commander-mcp/src/commander_mcp/learning/: weights.py
services/commander-mcp/src/commander_mcp/scripts/: crawl_decklists.py  ingest_patterns.py  ingest_rules.py  seed_card_notes.py
services/commander-mcp/src/commander_mcp/services/: card_scoring.py  deck_analysis.py  deck_scoring.py  decklist.py  mana.py  patterns.py  rules_loader.py  scryfall.py  synergy.py  synergy_learned.py
services/commander-mcp/tests/: fixtures.py  test_card_cache_repo.py  test_deck_analysis.py  test_decklist_parser.py  test_mana.py  test_phase4_crawler.py  test_phase5_learning.py  test_rules_integration.py  test_rules_parser.py  test_smoke.py  test_synergy.py
(+1053 files in other folders)
