[project]
name = "commander-mcp"
version = "0.1.0"
description = "MCP server providing Magic: The Gathering knowledge (Scryfall, rules, rulings, layer system) for Commander Collector."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
commander-mcp = "commander_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commander_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
